fix(ui): align style system with reference

--- a/frontend/app/theme.scss
+++ b/frontend/app/theme.scss
@@ -67,6 +67,7 @@
     --zindex-block-mask-inner: 10;
     --zindex-flash-error-container: 550;
     --zindex-app-background: -1;
+    --zindex-shell-overlay: 600;
 
     // z-indexes in xterm.css
     // xterm-helpers: 5
